--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -139,9 +139,35 @@ endif ()
 
 find_package(Mlpack REQUIRED)
 
+# Unfortunately this configuration variable is necessary and will need to be
+# updated as time goes on and new versions are released.
+set(Boost_ADDITIONAL_VERSIONS
+  "1.49.0" "1.50.0" "1.51.0" "1.52.0" "1.53.0" "1.54.0" "1.55.0")
+find_package(Boost 1.49
+    COMPONENTS
+      program_options
+      unit_test_framework
+      serialization
+    REQUIRED
+)
+
+# In Visual Studio, automatic linking is performed, so we don't need to worry
+# about it.  Clear the list of libraries to link against and let Visual Studio
+# handle it.
+if (MSVC)
+  link_directories(${Boost_LIBRARY_DIRS})
+  set(Boost_LIBRARIES "")
+endif ()
+
+link_directories(${Boost_LIBRARY_DIRS})
+
 # Include directories for the previous dependencies.
-set(MODELS_INCLUDE_DIRS ${MLPACK_INCLUDE_DIR} ${ARMADILLO_INCLUDE_DIR})
-set(MODELS_LIBRARIES ${MLPACK_LIBRARY} ${ARMADILLO_LIBRARIES})
+set(MODELS_INCLUDE_DIRS ${MLPACK_INCLUDE_DIR}
+                        ${ARMADILLO_INCLUDE_DIR}
+                        ${Boost_INCLUDE_DIRS})
+set(MODELS_LIBRARIES ${MLPACK_LIBRARY}
+                     ${ARMADILLO_LIBRARIES}
+                     ${Boost_LIBRARIES})
 
 include_directories(${MODELS_INCLUDE_DIRS})
 
