copying data files into binary folder and other minor fixes

--- a/Kaggle/DigitRecognizer/CMakeLists.txt
+++ b/Kaggle/DigitRecognizer/CMakeLists.txt
@@ -16,4 +16,11 @@ else()
 endif()
 
 add_executable(DigitRecognizer ${SOURCES})
-target_link_libraries(DigitRecognizer ${MLPACK_LIBRARIES} ${ARMADILLO_LIBRARIES})
+target_link_libraries(DigitRecognizer 
+  ${MLPACK_LIBRARIES} 
+  ${ARMADILLO_LIBRARIES})
+
+add_custom_command(TARGET DigitRecognizer POST_BUILD
+  COMMAND ${CMAKE_COMMAND} -E copy_directory 
+    ${CMAKE_CURRENT_SOURCE_DIR}/data/ 
+    ${PROJECT_BINARY_DIR}/../..)
