--- a/.travis.yml
+++ b/.travis.yml
@@ -1,21 +1,45 @@
+sudo: required
+dist: xenial
 language: cpp
+
+env:
+  - CMAKE_OPTIONS="-DDEBUG=OFF -DPROFILE=OFF -DPYTHON=/usr/bin/python"
+  - CMAKE_OPTIONS="-DDEBUG=OFF -DPROFILE=OFF -DPYTHON=/usr/bin/python3"
+  - CMAKE_OPTIONS="-DDEBUG=ON -DPROFILE=OFF -DBUILD_PYTHON_BINDINGS=OFF"
+
 before_install:
-  - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
-  - sudo apt-add-repository -y ppa:comp-phys/stable
-  - sudo add-apt-repository -y ppa:boost-latest/ppa
-  - sudo add-apt-repository -y "deb http://us.archive.ubuntu.com/ubuntu trusty main universe"
+  # xenial is not stable yet, so we have to manually disable the systemd
+  # automatic updates services.  Ideas adapted from here:
+  # https://unix.stackexchange.com/questions/315502/how-to-disable-apt-daily-service-on-ubuntu-cloud-vm-image
+  - sudo systemctl stop apt-daily.service apt-daily.timer apt-daily-upgrade.service apt-daily-upgrade.timer
+  - sudo systemctl kill --kill-who=all apt-daily.service apt-daily-upgrade.service
+  - while !(systemctl list-units --all apt-daily.service | grep -q dead); do sleep 1; done
+  - while !(systemctl list-units --all apt-daily-upgrade.service | grep -q dead); do sleep 1; done
   - sudo apt-get update -qq
-  - sudo apt-get install -qq g++-4.8 libarmadillo-dev libarmadillo4 libboost1.54-all-dev
-  - export CC=gcc-4.8
-  - export CXX=g++-4.8
-  - printenv
+  - sudo apt-get install -qq libopenblas-dev liblapack-dev g++ libboost-all-dev python3-pip
+  - sudo wget https://launchpadlibrarian.net/260609315/fix-std-vector-load.diff -O /usr/include/fix-std-vector-load.diff
+  - cd /usr/include && sudo patch -p1 < fix-std-vector-load.diff && sudo rm fix-std-vector-load.diff && cd -
+  # Install both python2 and python3 modules, and the build will decide which to
+  # use.
+  - sudo pip install cython numpy pandas
+  - sudo pip install --upgrade --ignore-installed setuptools
+  - sudo pip3 install cython numpy pandas
+  - sudo pip3 install --upgrade --ignore-installed setuptools
+  - curl https://ftp.fau.de/macports/distfiles/armadillo/armadillo-6.500.5.tar.gz | tar xvz && cd armadillo*
+  - cmake . && make && sudo make install && cd ..
   - sudo cp .travis/config.hpp /usr/include/armadillo_bits/config.hpp
+
 install:
-  - mkdir build && cd build && cmake -DDEBUG=OFF -DPROFILE=OFF .. && make -j3
+  - mkdir build && cd build && cmake $CMAKE_OPTIONS .. && make -j2
+
 script:
-  - travis_wait 30 ./bin/mlpack_test -p
+  - CTEST_OUTPUT_ON_FAILURE=1 travis_wait 30 ctest -j2
+
 notifications:
   email:
     - mlpack-git@lists.mlpack.org
   irc:
-    - "chat.freenode.net#mlpack"
+    channels:
+      - "chat.freenode.net#mlpack"
+    on_success: change
+on_failure: always
