Added command to clone mlpack repo

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,8 @@ before_install:
   - curl https://ftp.fau.de/macports/distfiles/armadillo/armadillo-6.500.5.tar.gz | tar xvz && cd armadillo*
   - cmake . && make && sudo make install && cd ..
   - sudo cp .travis/config.hpp /usr/include/armadillo_bits/config.hpp
+  - git clone --depth https://github.com/mlpack/mlpack.git
+  - cd mlpack && mkdir build && cd build && cmake $CMAKE_OPTIONS .. && make -j2
 
 install:
   - mkdir build && cd build && cmake $CMAKE_OPTIONS .. && make -j2
