--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ before_install:
   - cmake . && make && sudo make install && cd ..
   - sudo cp .travis/config.hpp /usr/include/armadillo_bits/config.hpp
   - sudo apt-get install git
-  - git clone --depth https://github.com/mlpack/mlpack.git
+  - git clone https://github.com/mlpack/mlpack.git --depth 5
   - cd mlpack && mkdir build && cd build && cmake $CMAKE_OPTIONS .. && make -j2
 
 install:
