--- a/.travis.yml
+++ b/.travis.yml
@@ -18,11 +18,11 @@ before_install:
   - curl https://ftp.fau.de/macports/distfiles/armadillo/armadillo-6.500.5.tar.gz | tar xvz && cd armadillo*
   - cmake . && make && sudo make install && cd ..
   - sudo cp .travis/config.hpp /usr/include/armadillo_bits/config.hpp
-  - cd ~/ && git clone https://github.com/mlpack/mlpack.git --depth 5
+  - cd $TRAVIS_BUILD_DIR && git clone https://github.com/mlpack/mlpack.git --depth 5
   - cd mlpack && mkdir build && cd build && cmake $CMAKE_OPTIONS .. && make -j2 && sudo make install
 
 install:
-  - cd ../.. && cd models && mkdir build && cd build && cmake $CMAKE_OPTIONS .. && make -j2
+  - cd $TRAVIS_BUILD_DIR && cd models && mkdir build && cd build && cmake $CMAKE_OPTIONS .. && make -j2
 
 notifications:
   email:
