--- a/.travis.yml
+++ b/.travis.yml
@@ -18,12 +18,12 @@ before_install:
   - curl https://ftp.fau.de/macports/distfiles/armadillo/armadillo-6.500.5.tar.gz | tar xvz && cd armadillo*
   - cmake . && make && sudo make install && cd ..
   - sudo cp .travis/config.hpp /usr/include/armadillo_bits/config.hpp
-  - cd "$(xdg-user-dir)" && git clone https://github.com/mlpack/mlpack.git --depth 5
+  - cd $TRAVIS_BUILD_DIR && cd .. && git clone https://github.com/mlpack/mlpack.git --depth 5
   - cd mlpack && mkdir build && cd build && cmake $CMAKE_OPTIONS .. && make -j2 && sudo make install
   - $TRAVIS_BUILD_DIR
 
 install:
-  - cd "$(xdg-user-dir)" && cd models && mkdir build && cd build && cmake $CMAKE_OPTIONS .. && make -j2
+  - cd $TRAVIS_BUILD_DIR && mkdir build && cd build && cmake $CMAKE_OPTIONS .. && make -j2
 
 notifications:
   email:
