--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,8 @@ before_install:
   
 install:
   - cd $TRAVIS_BUILD_DIR && mkdir build && cd build && cmake $CMAKE_OPTIONS .. && make -j2
+script:
+  - make
 
 notifications:
   email:
