--- a/.travis.yml
+++ b/.travis.yml
@@ -1,25 +1,18 @@
 sudo: required
-dist: xenial
+dist: trusty
 language: cpp
-
 
 before_install:
   # xenial is not stable yet, so we have to manually disable the systemd
   # automatic updates services.  Ideas adapted from here:
   # https://unix.stackexchange.com/questions/315502/how-to-disable-apt-daily-service-on-ubuntu-cloud-vm-image
-  - sudo systemctl stop apt-daily.service apt-daily.timer apt-daily-upgrade.service apt-daily-upgrade.timer
-  - sudo systemctl kill --kill-who=all apt-daily.service apt-daily-upgrade.service
-  - while !(systemctl list-units --all apt-daily.service | grep -q dead); do sleep 1; done
-  - while !(systemctl list-units --all apt-daily-upgrade.service | grep -q dead); do sleep 1; done
   - sudo apt-get update -qq
   - sudo apt-get install -qq libopenblas-dev liblapack-dev g++ libboost-all-dev python3-pip
-  - sudo wget https://launchpadlibrarian.net/260609315/fix-std-vector-load.diff -O /usr/include/fix-std-vector-load.diff
-  - cd /usr/include && sudo patch -p1 < fix-std-vector-load.diff && sudo rm fix-std-vector-load.diff && cd -
   - curl https://ftp.fau.de/macports/distfiles/armadillo/armadillo-6.500.5.tar.gz | tar xvz && cd armadillo*
   - cmake . && make && sudo make install && cd ..
   - sudo cp .travis/config.hpp /usr/include/armadillo_bits/config.hpp
   - cd $TRAVIS_BUILD_DIR && cd .. && git clone https://github.com/mlpack/mlpack.git --depth 5
-  - cd mlpack && mkdir build && cd build && cmake $CMAKE_OPTIONS .. && make -j2 && sudo make install
+  - cd mlpack && mkdir build && cd build && cmake .. && make -j2 && sudo make install
   
 install:
   - cd $TRAVIS_BUILD_DIR && mkdir build && cd build && cmake $CMAKE_OPTIONS .. && make -j2
