--- a/.travis.yml
+++ b/.travis.yml
@@ -11,13 +11,13 @@ before_install:
   - curl https://ftp.fau.de/macports/distfiles/armadillo/armadillo-6.500.5.tar.gz | tar xvz && cd armadillo*
   - cmake . && make && sudo make install && cd ..
   - sudo cp .travis/config.hpp /usr/include/armadillo_bits/config.hpp
-  - cd $TRAVIS_BUILD_DIR && cd .. && git clone https://github.com/mlpack/mlpack.git --depth 5
+  - cd $TRAVIS_BUILD_DIR && cd .. && git clone https://github.com/mlpack/mlpack.git --depth 1
   - cd mlpack && mkdir build && cd build && cmake .. && make -j2 && sudo make install
   
 install:
-  - cd $TRAVIS_BUILD_DIR && mkdir build && cd build && cmake $CMAKE_OPTIONS .. && make -j2
+  - cd $TRAVIS_BUILD_DIR && mkdir build && cd build && cmake ..
 script:
-  - make
+  - make -j2
 
 notifications:
   email:
