--- a/.travis.yml
+++ b/.travis.yml
@@ -3,11 +3,8 @@ dist: trusty
 language: cpp
 
 before_install:
-  # xenial is not stable yet, so we have to manually disable the systemd
-  # automatic updates services.  Ideas adapted from here:
-  # https://unix.stackexchange.com/questions/315502/how-to-disable-apt-daily-service-on-ubuntu-cloud-vm-image
   - sudo apt-get update -qq
-  - sudo apt-get install -qq libopenblas-dev liblapack-dev g++ libboost-all-dev python3-pip
+  - sudo apt-get install -qq libopenblas-dev liblapack-dev g++ libboost-all-dev
   - curl https://ftp.fau.de/macports/distfiles/armadillo/armadillo-6.500.5.tar.gz | tar xvz && cd armadillo*
   - cmake . && make && sudo make install && cd ..
   - sudo cp .travis/config.hpp /usr/include/armadillo_bits/config.hpp
