--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -183,7 +183,8 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/)
 # Recurse into each model.
 set(DIRS
   # Model directory.
-  Kaggle/DigitRecognizer
+  Kaggle/DigitRecognizer/src/FNN/
+  Kaggle/DigitRecognizer/src/CNN/
 )
 
 foreach(dir ${DIRS})
