--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -183,9 +183,8 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/)
 # Recurse into each model.
 set(DIRS
   # Model directory.
-  Kaggle/DigitRecognizer/src/FNN/
-  Kaggle/DigitRecognizer/src/CNN/
-)
+  Kaggle/DigitRecognizer
+  )
 
 foreach(dir ${DIRS})
   add_subdirectory(${dir})
