--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -12,17 +12,17 @@ configuration: Release
 os: Visual Studio 2015
 
 install:
-  - ps: nuget install boost -o "${env:APPVEYOR_BUILD_FOLDER}" -Version 1.60.0
-  - ps: nuget install boost_unit_test_framework-vc140 -o "${env:APPVEYOR_BUILD_FOLDER}" -Version 1.60.0
-  - ps: nuget install boost_program_options-vc140 -o "${env:APPVEYOR_BUILD_FOLDER}" -Version 1.60.0
-  - ps: nuget install boost_random-vc140 -o "${env:APPVEYOR_BUILD_FOLDER}" -Version 1.60.0
-  - ps: nuget install boost_serialization-vc140 -o "${env:APPVEYOR_BUILD_FOLDER}" -Version 1.60.0
-  - ps: nuget install boost_math_c99-vc140 -o "${env:APPVEYOR_BUILD_FOLDER}" -Version 1.60.0
-  - ps: nuget install OpenBLAS -o "${env:APPVEYOR_BUILD_FOLDER}"
-
-build_script:
   - ps : cd C:\projects
   - ps : git clone -q --depth=2 --branch=master https://github.com/mlpack/mlpack.git C:\projects\mlpack 2>$null
+  - ps: nuget install boost -o "C:\projects\mlpack" -Version 1.60.0
+  - ps: nuget install boost_unit_test_framework-vc140 -o "C:\projects\mlpack" -Version 1.60.0
+  - ps: nuget install boost_program_options-vc140 -o "C:\projects\mlpack" -Version 1.60.0
+  - ps: nuget install boost_random-vc140 -o "C:\projects\mlpack" -Version 1.60.0
+  - ps: nuget install boost_serialization-vc140 -o "C:\projects\mlpack" -Version 1.60.0
+  - ps: nuget install boost_math_c99-vc140 -o "C:\projects\mlpack" -Version 1.60.0
+  - ps: nuget install OpenBLAS -o "C:\projects\mlpack"
+
+build_script:
   - mkdir boost_libs
   - ps: cp C:\projects\mlpack\boost_program_options-vc140.1.60.0.0\lib\native\address-model-64\lib\*.* C:\projects\mlpack\boost_libs\
   - ps: cp C:\projects\mlpack\boost_math_c99-vc140.1.60.0.0\lib\native\address-model-64\lib\*.* C:\projects\mlpack\boost_libs\
