--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -23,7 +23,7 @@ install:
   - ps: nuget install OpenBLAS -o "C:\projects\mlpack"
 
 build_script:
-  - ps: C:\projects\mlpack
+  - ps: cd C:\projects\mlpack
   - mkdir boost_libs
   - ps: cp C:\projects\mlpack\boost_program_options-vc140.1.60.0.0\lib\native\address-model-64\lib\*.* C:\projects\mlpack\boost_libs\
   - ps: cp C:\projects\mlpack\boost_math_c99-vc140.1.60.0.0\lib\native\address-model-64\lib\*.* C:\projects\mlpack\boost_libs\
