--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -182,9 +182,10 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/)
 
 # Recurse into each model.
 set(DIRS
-  # Model directory.
+  # Model directories.
   Kaggle/DigitRecognizer
-  )
+  Kaggle/DigitRecognizerBatchNorm
+)
 
 foreach(dir ${DIRS})
   add_subdirectory(${dir})
