Add CNN model for Digit Recognition (Kaggle)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -184,6 +184,7 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin/)
 set(DIRS
   # Model directory.
   Kaggle/DigitRecognizer
+  Kaggle/DigitRecognizerCNN
   )
 
 foreach(dir ${DIRS})
