Add vae model, generation script.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -186,6 +186,7 @@ set(DIRS
   Kaggle/DigitRecognizer
   Kaggle/DigitRecognizerBatchNorm
   Kaggle/DigitRecognizerCNN
+  vae/vae_mnist
 )
 
 foreach(dir ${DIRS})
