--- a/vae/vae_mnist/CMakeLists.txt
+++ b/vae/vae_mnist/CMakeLists.txt
@@ -1,10 +1,10 @@
 cmake_minimum_required(VERSION 2.6)
-project(vae-vae-mnist)
+project(vae-mnist)
 
 option(DEBUG "DEBUG" OFF)
 
 set(MODEL_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)
-include_directories("${CMAKE_CURRENT_SOURCE_DIR}/../")
+include_directories("${CMAKE_CURRENT_SOURCE_DIR}/../../")
 
 set(SOURCES
   ${MODEL_SOURCE_DIR}/vae.cpp
@@ -21,9 +21,17 @@ add_executable(vae ${SOURCES})
 target_link_libraries(vae
   ${MLPACK_LIBRARIES}
   ${ARMADILLO_LIBRARIES}
-  ${Boost_Serialization_LIBRARIES})
+  ${Boost_LIBRARIES})
 
-add_custom_command(TARGET vae POST_BUILD
-  COMMAND ${CMAKE_COMMAND} -E copy_directory
-  ${CMAKE_CURRENT_SOURCE_DIR}/../vae/data/
-    ${PROJECT_BINARY_DIR}/../..)
+if (NOT EXISTS ${PROJECT_BINARY_DIR}/../data)
+  add_custom_command(TARGET vae POST_BUILD
+    COMMAND ${CMAKE_COMMAND} -E tar xvzf
+      ${CMAKE_CURRENT_SOURCE_DIR}/../../data/mnist_full.tar.xz
+    WORKING_DIRECTORY ${PROJECT_BINARY_DIR}/../)
+endif()
+
+if (NOT EXISTS ${PROJECT_BINARY_DIR}/../saved_models)
+  add_custom_command(TARGET vae POST_BUILD
+    COMMAND ${CMAKE_COMMAND} -E make_directory
+      ${PROJECT_BINARY_DIR}/../saved_models)
+endif()
