--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,10 @@ before_install:
   - sudo apt-get install -qq libopenblas-dev liblapack-dev g++ libboost-all-dev
   - curl https://ftp.fau.de/macports/distfiles/armadillo/armadillo-6.500.5.tar.gz | tar xvz && cd armadillo*
   - cmake . && make && sudo make install && cd ..
+  - wget http://ensmallen.org/files/ensmallen-1.14.0.tar.gz
+  - tar xvz ensmallen-1.14.0.tar.gz && tar -xzf ensmallen-1.14.0.tar.gz
+  - cd ensmallen-1.14.0
+  - cmake . && make && sudo make install && cd ..
   - sudo cp .travis/config.hpp /usr/include/armadillo_bits/config.hpp
   - cd $TRAVIS_BUILD_DIR && cd .. && git clone https://github.com/mlpack/mlpack.git --depth 1
   - cd mlpack && mkdir build && cd build && cmake .. && make -j2 && sudo make install
