--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -12,9 +12,10 @@ environment:
   boost_serialization-vc140.1.60.0.0/lib/native/address-model-64/lib/*.*"
   BOOST_UNIT_TEST: "C:/projects/mlpack/\
   boost_unit_test_framework-vc140.1.60.0.0/lib/native/address-model-64/lib/*.*"
+  ARMADILLO_INCLUDE: "C:/projects/mlpack/armadillo-7.800.2/include"
   ARMADILLO_LIBRARY: "C:/projects/mlpack/armadillo-7.800.2/\
   build/Debug/armadillo.lib"
-  BLAS_LIBRARY: "%APPVEYOR_BUILD_FOLDER%/OpenBLAS.0.2.14.1/lib/native/lib/x64/\
+  BLAS_LIBRARY: "C:/projects/mlpack/OpenBLAS.0.2.14.1/lib/native/lib/x64/\
   libopenblas.dll.a"
   MLPACK_DIR: "C:\projects\mlpack"
   MLPACK_LIBRARY: "C:/projects/mlpack/build/Release/mlpack.lib"
@@ -31,7 +32,7 @@ configuration: Release
 os: Visual Studio 2015
 
 install:
-  - ps : cd C:\projects
+  - ps: cd C:\projects
   - ps: nuget install boost -o %MLPACK_DIR% -Version 1.60.0
   - ps: >
       nuget install boost_unit_test_framework-vc140
@@ -52,6 +53,8 @@ install:
   - set path=C:\Program Files (x86)\WiX Toolset v3.11\bin;%path%
 
 build_script:
+  # build mlpack
+  - cd C:\projects\mlpack
   - mkdir boost_libs
   - ps: cp ${env:BOOST_PROG_OPTION} C:\projects\mlpack\boost_libs\
   - ps: cp ${env:BOOST_MATH} C:\projects\mlpack\boost_libs\
@@ -65,16 +68,15 @@ build_script:
     cmake -G "Visual Studio 14 2015 Win64"
     -DBLAS_LIBRARY:FILEPATH=%BLAS_LIBRARY%
     -DLAPACK_LIBRARY:FILEPATH=%BLAS_LIBRARY%
-    -DCMAKE_PREFIX:FILEPATH="%APPVEYOR_BUILD_FOLDER%/armadillo"
+    -DCMAKE_PREFIX:FILEPATH="C:/projects/mlpack/armadillo"
     -DBUILD_SHARED_LIBS=OFF
     -DCMAKE_BUILD_TYPE=Release ..
-  - '"C:\Program Files (x86)\MSBuild\14.0\Bin\MSBuild.exe" "C:\projects\mlpack\armadillo-7.800.2\build\armadillo.sln" /m /verbosity:quiet /p:Configuration=Release;Platform=x64'
   - cd C:\projects\mlpack && mkdir build && cd build
   - >
     cmake -G "Visual Studio 14 2015 Win64"
     -DBLAS_LIBRARY:FILEPATH=%BLAS_LIBRARY%
     -DLAPACK_LIBRARY:FILEPATH=%BLAS_LIBRARY%
-    -DARMADILLO_INCLUDE_DIR="C:/projects/mlpack/armadillo-7.800.2/include"
+    -DARMADILLO_INCLUDE_DIR=%ARMADILLO_INCLUDE%
     -DARMADILLO_LIBRARY:FILEPATH=%ARMADILLO_LIBRARY%
     -DBOOST_INCLUDEDIR:PATH=%BOOST_INCLUDE%
     -DBOOST_LIBRARYDIR:PATH="C:/projects/mlpack/boost_libs"
@@ -82,21 +84,21 @@ build_script:
     -DPROFILE=OFF
     -DBUILD_PYTHON_BINDINGS=OFF
     -DCMAKE_BUILD_TYPE=Release ..
-  - '"C:\Program Files (x86)\MSBuild\14.0\Bin\MSBuild.exe" "C:\projects\mlpack\build\mlpack.sln" /m /verbosity:minimal /nologo /p:BuildInParallel=true /p:Configuration=Release;Platform=x64'
   - >
     7z a mlpack-windows-no-libs.zip
     "%APPVEYOR_BUILD_FOLDER%\build\Release\*.exe"
   - >
     7z a mlpack-windows.zip
-    "%APPVEYOR_BUILD_FOLDER%\build\Release\*.*"
-    "%APPVEYOR_BUILD_FOLDER%/OpenBLAS.0.2.14.1/lib/native/lib/x64/*.*"
+    "C:/projects/mlpack/build/Release/*.*"
+    "C:/projects/mlpack/OpenBLAS.0.2.14.1/lib/native/lib/x64/*.*"
 
+  # build models
   - cd C:\projects\models && mkdir build && cd build
   - >
     cmake -G "Visual Studio 14 2015 Win64"
     -DBLAS_LIBRARY:FILEPATH=%BLAS_LIBRARY%
     -DLAPACK_LIBRARY:FILEPATH=%BLAS_LIBRARY%
-    -DARMADILLO_INCLUDE_DIR="C:/projects/mlpack/armadillo-7.800.2/include"
+    -DARMADILLO_INCLUDE_DIR=%ARMADILLO_INCLUDE%
     -DARMADILLO_LIBRARY:FILEPATH=%ARMADILLO_LIBRARY%
     -DBOOST_INCLUDEDIR:PATH=%BOOST_INCLUDE%
     -DBOOST_LIBRARYDIR:PATH="C:\projects\mlpack\boost_libs"
@@ -106,7 +108,6 @@ build_script:
     -DDEBUG=OFF -DPROFILE=OFF
     -DBUILD_PYTHON_BINDINGS=OFF
     -DCMAKE_BUILD_TYPE=Release ..
-  - '"C:\Program Files (x86)\MSBuild\14.0\Bin\MSBuild.exe" "C:\projects\models\build\models.sln" /m /verbosity:minimal /nologo /p:Configuration=Release;Platform=x64'
 
 artifacts:
   - path: '**\*.zip'
