added gan into build list

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -243,6 +243,8 @@ set(DIRS
   Kaggle/DigitRecognizerBatchNorm
   vae/vae_mnist
   vae/vae_cnn_mnist
+  gan/gan_sample_generator
+  gan/gan
 )
 
 foreach(dir ${DIRS})
