--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -17,7 +17,7 @@ environment:
   build/Debug/armadillo.lib"
   BLAS_LIBRARY: "C:/projects/mlpack/OpenBLAS.0.2.14.1/lib/native/lib/x64/\
   libopenblas.dll.a"
-  MLPACK_DIR: "C:\projects\mlpack"
+  MLPACK_DIR: "C:/projects/mlpack"
   MLPACK_LIBRARY: "C:/projects/mlpack/build/Release/mlpack.lib"
   MLPACK_INCLUDE: "C:/projects/mlpack/build/include"
   BOOST_INCLUDE: "C:/projects/mlpack/boost.1.60.0.0/lib/native/include"
