--- a/vae/vae_mnist/CMakeLists.txt
+++ b/vae/vae_mnist/CMakeLists.txt
@@ -1,11 +1,9 @@
-cmake_minimum_required(VERSION 2.6)
+cmake_minimum_required(VERSION 3.1...3.16)
 project(vae-mnist)
 
 option(DEBUG "DEBUG" OFF)
 
 set(MODEL_SOURCE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)
-include_directories("${CMAKE_CURRENT_SOURCE_DIR}/../../")
-
 set(SOURCES
   ${MODEL_SOURCE_DIR}/vae.cpp
   )
@@ -19,9 +17,10 @@ endif()
 
 add_executable(vae ${SOURCES})
 target_link_libraries(vae
-  ${MLPACK_LIBRARIES}
-  ${ARMADILLO_LIBRARIES}
-  ${Boost_LIBRARIES})
+    PRIVATE ${MLPACK_LIBRARIES}
+    PRIVATE ${ARMADILLO_LIBRARIES}
+    PRIVATE ${Boost_LIBRARIES})
+target_include_directories(vae PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/../../")
 
 if (NOT EXISTS ${PROJECT_BINARY_DIR}/../data)
   add_custom_command(TARGET vae POST_BUILD
