--- a/.travis.yml
+++ b/.travis.yml
@@ -1,17 +1,17 @@
 sudo: required
-dist: trusty
+dist: xenial
 language: cpp
 
 before_install:
   - sudo apt-get update -qq
-  - sudo apt-get install -qq libopenblas-dev liblapack-dev g++ libboost-all-dev
+  - sudo apt-get install -qq --no-install-recommends cmake binutils-dev libopenblas-dev liblapack-dev build-essential libboost-all-dev
   - curl -O http://masterblaster.mlpack.org:5005/armadillo-8.400.0.tar.gz -o armadillo-8.400.0.tar.gz && tar xvzf armadillo-8.400.0.tar.gz && cd armadillo-8.400.0
   - cmake . && make && ARMADILLO_INCLUDE_DIR=$(pwd)/include
   - cd $TRAVIS_BUILD_DIR && git clone https://github.com/mlpack/mlpack.git --depth 1
-  - cd mlpack && mkdir mlpack_build && cd mlpack_build && cmake -DARMADILLO_INCLUDE_DIR=$ARMADILLO_INCLUDE_DIR -DBUILD_PYTHON_BINDINGS=OFF -DBUILD_TESTS=OFF .. && make -j2 && sudo make install
+  - cd mlpack && mkdir mlpack_build && cd mlpack_build && cmake -DUSE_OPENMP=OFF -DBUILD_JULIA_BINDINGS=OFF -DARMADILLO_INCLUDE_DIR=$ARMADILLO_INCLUDE_DIR -DBUILD_PYTHON_BINDINGS=OFF -DBUILD_TESTS=OFF .. && make -j2 && sudo make install
 
 install:
-  - cd $TRAVIS_BUILD_DIR && mkdir build && cd build && cmake -DARMADILLO_INCLUDE_DIR=$ARMADILLO_INCLUDE_DIR ..
+  - cd $TRAVIS_BUILD_DIR && mkdir build && cd build && cmake -DUSE_OPENMP=OFF -DARMADILLO_INCLUDE_DIR=$ARMADILLO_INCLUDE_DIR ..
 script:
   - make -j2
 
